First attempt at increase the amount of time the site will remember a user

--- a/rcstatsV2/templates/rcstats_base.html
+++ b/rcstatsV2/templates/rcstats_base.html
@@ -71,6 +71,7 @@
             <div class="form-group">
               <input type="password" id="id_password" name="password" placeholder="Password" class="form-control">
             </div>
+            <input type="hidden" id="id_remember_me" value="checked">
 
             <button type="submit" class="btn btn-success">Sign in</button>
           </form>
