--- a/rcstatsV2/templates/rcstats_base.html
+++ b/rcstatsV2/templates/rcstats_base.html
@@ -105,7 +105,7 @@
     <script src="/static/js/bootstrap-table-mobile.min.js"></script>-
     <script src="/static/js/underscore-min.js"></script>
     <script src="/static/js/moment.min.js"></script>
-    <!-- Google Analytics 
+    <!-- Google Analytics -->
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -115,7 +115,7 @@
     ga('create', 'UA-32701094-1', 'auto');
     ga('send', 'pageview');
     </script>
-     End Google Analytics -->
+    <!-- End Google Analytics -->
     {% block script %} {% endblock %}
 
 </body>
