--- a/rcstatsV2/templates/userena/profile_detail.html
+++ b/rcstatsV2/templates/userena/profile_detail.html
@@ -76,4 +76,10 @@
 
     {% endblock %}
   </div>
+
+    <div class="col-md-12 well">
+      <h2>Race Results in Your Inbox</h2>
+      <p>Select the classes you want to follow.</p>
+      <a type="button" href="{% url 'race-emails' %}" class="btn btn-success">Choose the race classes you want to be emailed about</a>
+    </div>
 {% endblock %}
