Modify the single racer list of races page to also show the day and not just the month

--- a/core/templates/racer_list/single_racer_race_list.html
+++ b/core/templates/racer_list/single_racer_race_list.html
@@ -59,7 +59,7 @@ Racers
         <td>
           Rnd:{{ race.raceid.roundnumber }}
           Race:{{ race.raceid.racenumber }}
-          Date:{{ race.raceid.racedate | date:'Y-m'}} 
+          Date:{{ race.raceid.racedate | date:'Y-m-d'}} 
         </td>
         <td>{{ race.lapcount }}</td>
         <td>{{ race.racetime | date:"i:s"}}</td>
