Disable koh table responsive behavior (only two columns in that table)

--- a/core/templates/king_of_the_hill/king_of_the_hill_summary.html
+++ b/core/templates/king_of_the_hill/king_of_the_hill_summary.html
@@ -62,7 +62,7 @@ King of the Hill
       <h4>{{ key.raceclass }}</h4>
 
       <div class="panel panel-default">
-      <table data-mobile-responsive="true" data-toggle="table">
+      <table data-toggle="table">
         <thead>
           <tr>
             <th>Name</th>
