Fix copy on landing pag e button for KoH

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -47,7 +47,7 @@ RC-Stats is a racing community to track and share your RC race results.
         </a>
       </h3>
       <p>Where do you stand in the rankings?</p>
-      <a type="button" class="btn btn-info" href={% url 'koh-summary' trackname.id %}>{{ trackname.trackname }} Racer List</a>
+      <a type="button" class="btn btn-info" href={% url 'koh-summary' trackname.id %}>King Of the Hill</a>
     </div>
     {% endif %}
   </div>
