--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -45,8 +45,33 @@ RC-Stats is a racing community to track and share your RC race results.
           <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> King Of the Hill
         </a>
       </h3>
-      <p>Where do you stand in the rankings?</p>
-      <a type="button" class="btn btn-info" href={% url 'koh-summary' trackname.id %}>King Of the Hill</a>
+      <p>Where do you stand in the rankings? You get points for each qualifier and main event you race in!</p>
+
+      {% if koh_summarys != null %}
+      <h4>{{ singleracedetail.racedata }} - Top 3</h4>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Name</th>
+            <th>Score</th>
+          </tr>
+        </thead>
+        <tbody>
+        {% for koh_summary in koh_summarys %}
+          <tr>
+          <td>{{ forloop.counter }}</td>
+          <td>
+            <a href="{% url 'single_racer_race_list' track_id=trackname.id racerid_id=koh_summary.racerid__id %}">
+            {{ koh_summary.racerid__racerpreferredname }}
+            </a>
+          </td>
+          <td>{{ koh_summary.score }}</td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+      {% endif %}
     </div>
     {% endif %}
   </div>
@@ -60,7 +85,7 @@ RC-Stats is a racing community to track and share your RC race results.
         </a>
       </h3>
       <p>View {{ trackname.trackname }} racers and all the events for a specific racer.</p>
-      <a type="button" class="btn btn-info" href={% url 'racer-list-by-track' trackname.id %}>{{ trackname.trackname }} Racer List</a>
+      <a type="button" class="btn btn-info" href={% url 'racer-list-by-track' trackname.id %}>{{ trackname.trackname }} Racer List <span class="badge">{{ racer_count }}</span></a>
     </div>
     {% endif %}
   </div>
