Tweak copy for KoH table on the landing page

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -52,7 +52,7 @@ RC-Stats is a racing community to track and share your RC race results.
       <table class="table table-bordered">
         <thead>
           <tr>
-            <th></th>
+            <th>Rank</th>
             <th>Name</th>
             <th>Score</th>
           </tr>
