--- a/core/templates/racer_list/racer_list.html
+++ b/core/templates/racer_list/racer_list.html
@@ -9,7 +9,6 @@ Racers
 {% endblock %}
 
 {% block stylesheet %}
-<link href="/static/css/bootstrap-switch.css" rel="stylesheet">
 {% endblock %}
 
 
@@ -29,33 +28,29 @@ Racers
     </button>
   </div>
   
-  <div class="panel panel-default">
-
-    <!-- Table -->
-    <table class="table">
-      <thead>
-        <tr>
-          <th class="hidden">id</th>
-          <th>Name</th>
-          <th>RaceCount</th>
-        </tr>
-      </thead>
-      <tbody>
-      {% for racerid in racerid_and_counts %}
-        <tr>
-        <th class="hidden">{{ racerid.racerid }}</th>
-        <td>
-          <a href="{% url 'single_racer_race_list' track_id=trackname.id racerid_id=racerid.racerid %}">
-          {{ racerid.racerid__racerpreferredname }}
-          </a>
-        </td>
-        <td>{{ racerid.racerid_count }}</td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
- 
+  <!-- Primary table to list all of the racers -->
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th class="hidden">id</th>
+        <th>Name</th>
+        <th>RaceCount</th>
+      </tr>
+    </thead>
+    <tbody>
+    {% for racerid in racerid_and_counts %}
+      <tr>
+      <th class="hidden">{{ racerid.racerid }}</th>
+      <td>
+        <a href="{% url 'single_racer_race_list' track_id=trackname.id racerid_id=racerid.racerid %}">
+        {{ racerid.racerid__racerpreferredname }}
+        </a>
+      </td>
+      <td>{{ racerid.racerid_count }}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 
   </br>
 </div>
