--- a/core/templates/racer_list/single_racer_race_list.html
+++ b/core/templates/racer_list/single_racer_race_list.html
@@ -30,7 +30,8 @@
     <!-- Table -->
     <table data-show-toggle="false" 
            data-mobile-responsive="true"
-           data-toggle="table">
+           data-toggle="table"
+           data-pagination="true">
       <thead>
         <tr>
           <!-- I was hiding the id column, but there appears to be a bug in bootstrap-table functionality around the data-card-view -->
