--- a/rcstatsV2/templates/rcstats_base.html
+++ b/rcstatsV2/templates/rcstats_base.html
@@ -40,7 +40,15 @@
             <img style="max-width:100px; margin-top: -7px;" src="/static/img/logo_white.png"/>
           </a>
         </div>
+
         <div id="navbar" class="navbar-collapse collapse">
+
+        <ul class="nav navbar-nav">
+          <li><a class="btn" href={% url 'race-results-by-track' 1 %}>Results</a></li>
+          <li><a class="btn" href={% url 'racer-list-by-track' 1 %}>Racers</a></li>
+          <li><a class="btn" href={% url 'koh-summary' 1 %}>King</a></li>
+          <li><a class="btn" href={% url 'race-emails' %}>Email</a></li>
+        </ul>
 
         {% if user.is_authenticated %}
 
