--- a/rcstatsV2/templates/rcstats_base.html
+++ b/rcstatsV2/templates/rcstats_base.html
@@ -109,7 +109,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/bootstrap-table.min.js"></script>
-    <script src="/static/js/bootstrap-table-mobile.min.js"></script>-
+    <script src="/static/js/bootstrap-table-mobile.min.js"></script>
     <script src="/static/js/underscore-min.js"></script>
     <script src="/static/js/moment.min.js"></script>
 
